tests/tooling/fixtures/native/execution/negative/misplaced_qualifier_after_param_type_extern.objc3
module MisplacedQualifierAfterParamTypeExtern;

fn add(lhs: i32 extern, rhs: i32) -> i32;

fn main() -> i32 {
  return 0;
}
